@@ -1,0 +1,5 @@
+#!/bin/sh
+
+set -e
+
+LC_ALL=C.UTF-8 $TBL_DCTRL 
