@@ -1,8 +1,11 @@
 dctrl-tools (2.23) UNRELEASED; urgency=low
 
   * Merge 2.22.1 and 2.22.2.
+  * Add a test case (tests/0021.{in,out,sh}) to verify that tbl-dctrl
+    handles UTF-8 correctly.
+     - As it requires the C.UTF-8 locale, build-depend on libc-bin >= 2.13
 
- -- Antti-Juhani Kaijanaho <ajk@debian.org>  Thu, 07 Jun 2012 12:06:05 +0300
+ -- Antti-Juhani Kaijanaho <ajk@debian.org>  Thu, 07 Jun 2012 12:07:58 +0300
 
 dctrl-tools (2.22.2) unstable; urgency=low
 
